--- a/translations/message.ru.yml
+++ b/translations/message.ru.yml
@@ -1,5 +1,9 @@
-start:
-  hello: 'Привет, @%username%! Я компьютерная программа, которая умеет общаться (то есть, ''бот'').'
-
-help:
-  commands: "/start - Начать общение \n/help - Посмотреть команды бота"
+commands:
+  start:
+    hello: 'Привет, @%username%! Я компьютерная программа, которая умеет общаться (то есть, ''бот'').'
+  help:
+    list: "\n\n<b>Что я умею</b>: 
+    \n/start    - Начать общение 
+    \n/help     - Посмотреть команды бота 
+    \n/view     - Новые дневы 
+    \n/create  - Поделиться своим дневником"
