+add callback system

--- a/translations/message.ru.yml
+++ b/translations/message.ru.yml
@@ -2,8 +2,19 @@ commands:
   start:
     hello: 'Привет, @%username%! Я компьютерная программа, которая умеет общаться (то есть, ''бот'').'
   help:
-    list: "\n\n<b>Что я умею</b>: 
-    \n/start    - Начать общение 
-    \n/help     - Посмотреть команды бота 
-    \n/view     - Новые дневы 
-    \n/create  - Поделиться своим дневником"
+    title: 'Что я умею:'
+    list: "
+    \n/start - Начать общение 
+    \n/about - Посмотреть команды бота 
+    \n/view - Смотреть новые дневы 
+    \n/publish - Поделиться своим дневником"
+  about:
+    info: 'Инфа для пользователя'
+
+callback:
+  understand:
+    message: "
+    Cлушай, @username... 
+    Я тебя нихуя не понимаю. 
+    Напиши плз /start и прочитай как со мной взаимодействовать,
+    а то я ебал меня на такое не запрограммировали 👁👄👁."
