--- a/translations/message.ru.yml
+++ b/translations/message.ru.yml
@@ -1,15 +1,19 @@
+##Файл в котором лежат все текстовые ресурсы
 commands:
   start:
-    hello: 'Привет, @%username%! Я компьютерная программа, которая умеет общаться (то есть, ''бот'').'
+    hello: 'Привет, @%username%! Я компьютерная программа, которая умеет общаться (то есть, ''бот''). (дописать к релизу)'
   help:
     title: 'Что я умею:'
     list: "
-    \n/start - Начать общение 
-    \n/about - Посмотреть команды бота 
+    \n/start - Информация о боте и список команд 
+    \n/about - Контактная информация 
     \n/view - Смотреть новые дневы 
     \n/publish - Поделиться своим дневником"
   about:
-    info: 'Инфа для пользователя'
+    info: 'Тут должна быть информация о том как связаться с админами.(написать к релизу)'
+  publish:
+    new_post_information: 'Тут должно быть стартовое сообщение c описанием того как нужно составить анкету. (написать к релизу)'
+    post_exist: 'Тут должно быть сообщение о том, что пользователь уже создавал пост. (написать к релизу)'
 
 callback:
   understand:
@@ -18,3 +22,18 @@ callback:
     Я тебя нихуя не понимаю. 
     Напиши плз /start и прочитай как со мной взаимодействовать,
     а то я ебал меня на такое не запрограммировали 👁👄👁."
+  publish:
+    new_post_ok: 'Тут должно быть сообщение в котором задается вопрос отредактировать анкету или нет для нового поста. (написать к релизу)'
+    update_post_ok: 'Тут должно быть сообщение в котором задается вопрос отредактировать анкету или нет для существующего поста. (написать к релизу)'
+    approve:
+      not_update: 'Тут должно быть условно "Окей оставляем твой пост как есть" (дописать к релизу)'
+      set_update: 'Тут должно быть сообщение в котором нужно сказать пользователю прислать новую анкету в замен предыдущей (написать к релизу)'
+    moderate: 'Тут должно быть сообщение о том, что его анкета отправлена на модерацию (написать к релизу)'
+    post_invalid: 'Тут должно быть сообщение, что пост не прошел первичную валидацию. Как пример:
+     "Сообщение отправлено неправильно! В анкете обязательно 
+     Прикрепи ссылку на тг канал в формате https://t.me/{channel_name} отредактируй и отправь еще раз"'
+
+keyboard:
+  edit:
+    confirm: "Сохранить эту версию"
+    cancel: "Отредактировать"
