Make admin bot struct

--- a/translations/message.ru.yml
+++ b/translations/message.ru.yml
@@ -28,6 +28,7 @@ callback:
     approve:
       not_update: 'Тут должно быть условно "Окей оставляем твой пост как есть" (дописать к релизу)'
       set_update: 'Тут должно быть сообщение в котором нужно сказать пользователю прислать новую анкету в замен предыдущей (написать к релизу)'
+      pls_push_button: "Друг я жду от тебя только то что ты нажмешь на кнопу 😫"
     moderate: 'Тут должно быть сообщение о том, что его анкета отправлена на модерацию (написать к релизу)'
     post_invalid: 'Тут должно быть сообщение, что пост не прошел первичную валидацию. Как пример:
      "Сообщение отправлено неправильно! В анкете обязательно 
